# aplinter

./: pyproject.toml
src/aplinter/: __init__.py  ast_checks.py  types.py
test/: common.py  test_ast_checks.py  test_file_type.py
