[project]
name = "aplinter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bandit"
]

[dependency-groups]
dev = [
  "pytest"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
aplinter = "aplinter:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aplinter"]
